// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ErrorPermissionInfo matches the snapshot in closed state 1`] = `
<div
  class="wb-db-error-permission-info"
>
  <div
    class="wb-db-error-permission-info__header"
  >
    header
  </div>
  <a
    class="wb-db-error-permission-info__toggle wb-db-error-permission-info__toggle--closed"
  >
    ⧼wikibase-client-data-bridge-permissions-error-info⧽
  </a>
  <!--v-if-->
</div>
`;

exports[`ErrorPermissionInfo matches the snapshot in opened state 1`] = `
<div
  class="wb-db-error-permission-info"
>
  <div
    class="wb-db-error-permission-info__header"
  >
    header
  </div>
  <a
    class="wb-db-error-permission-info__toggle wb-db-error-permission-info__toggle--open"
  >
    ⧼wikibase-client-data-bridge-permissions-error-info⧽
  </a>
  <div
    class="wb-db-error-permission-info__body"
  >
    body
  </div>
</div>
`;
